app1-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  selector:
      matchLabels:
        app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: app1:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
