app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  selector:
      matchLabels:
        app: app2
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: app2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
