app1-service.yml
kind: Service
apiVersion: v1
metadata:
  name: app1
 spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 8081
  type: ClusterIP
