app2-service.yml
kind: Service
apiVersion: v1
metadata:
  name: app2
  spec:
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 8082
  type: ClusterIP
